--- a/css/main.css
+++ b/css/main.css
@@ -8,5 +8,11 @@ body {
 	border: 1px solid;
 	position: absolute;
 	outline: 2px solid;
+}
 
+div {
+	color: white;
+	background-color: red;
+	padding: 20px;
+	margin: 20px;
 }
